--- a/style.css
+++ b/style.css
@@ -121,5 +121,15 @@ button {
     box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.5);
 }
 
-
-
+#quotePhrase{
+    font-family: cursive, sans-serif;
+    font-weight: 700;
+    font-size: 2rem;
+    letter-spacing: 0.05rem;
+    text-align:center;
+    font-style: italic;
+    color:rgba(54, 22, 1,0.9);
+    display:grid;
+    place-items:center;
+    height:30vh;
+}
